--- a/src/components/LayoutAdmin/style.css
+++ b/src/components/LayoutAdmin/style.css
@@ -10,7 +10,7 @@
   color: #1890ff;
 }
 
-.logo {
+.logo-layout-admin {
   height: 32px;
   margin: 16px;
   background: rgba(255, 255, 255, 0.3);
@@ -18,4 +18,10 @@
 
 .site-layout .site-layout-background {
   background: #fff;
+}
+
+.the-div {
+  width: 100%;
+  height: 30px;
+  border: 2px solid red;
 }
