--- a/src/components/Products/style.css
+++ b/src/components/Products/style.css
@@ -20,3 +20,14 @@
   height: 30px;
   border: 2px solid red;
 }
+
+.ddd {
+  margin-top: 0;
+  text-align: center;
+  position: fixed;
+
+  bottom: 0;
+
+  width: 100%;
+  background: #e1ab22;
+}
