--- a/src/components/admin/TourList/style.scss
+++ b/src/components/admin/TourList/style.scss
@@ -18,10 +18,13 @@
 
 .wraper {
   width: 100%;
+  height: auto;
 }
 
 .aaa {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  height: 100%;
+  // position: relative;
 }
